# paulosevero.github.io

./: .gitignore  404.html  CLAUDE.md  CNAME  README.md  _config.yml  feed.xml  index.html  purgecss.config.js  pyproject.toml  robots.txt  sitemap.xml
_bibliography/: papers.bib
_data/: repositories.yml
_includes/: header.html
_layouts/: about.liquid
_news/: announcement_1.md  announcement_2.md  announcement_3.md
_pages/: about.md  projects.md  publications.md  repositories.md  teaching.md
_projects/: edgesimpy.md
assets/css/: bootstrap.min.css  jupyter-grade3.css  jupyter-monokai.css  main.css  mdb.min.css
assets/json/: resume.json
assets/jupyter/: blog.ipynb.html
blog/2015/: index.html
blog/2015/code/: index.html
blog/2015/disqus-comments/: index.html
blog/2015/formatting-and-links/: index.html
blog/2015/images/: index.html
blog/2015/math/: index.html
blog/2020/: index.html
blog/2020/github-metadata/: index.html
blog/2020/twitter/: index.html
blog/2021/: index.html
blog/2021/diagrams/: index.html
blog/2021/distill/: index.html
blog/2022/: index.html
blog/2022/giscus-comments/: index.html
blog/2022/redirect/: index.html
blog/2023/: index.html
blog/2023/audios/: index.html
blog/2023/tables/: index.html
news/: index.html
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
projects/: index.html
projects/2_project/: index.html
projects/edgesimpy/: index.html
publications/: index.html
repositories/: index.html
static/css/: main.css
teaching/: index.html
(+26 files in other folders)
