[tool.poetry]
name = "paulosevero-github-io"
version = "0.1.0"
description = ""
authors = ["Paulo Silas Severo de Souza <paulosilas@unipampa.edu.br>"]
readme = "README.md"
packages = [{include = "paulosevero"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
